2017-05-24 majiasheng <jiasheng.ma@yahoo.com>
	* Refactored directory structure (v1)
