@@ -4,4 +4,5 @@ define("DB_SERVER",	"127.0.0.1");
 define("DB_USER", 	"fb-admin");
 define("DB_PASSWORD", "Pw4Admin");
 define("DB_NAME",		"fb_lets_go");
+define("USERS_TABLE", "users");
 ?>
