@@ -1,3 +1,10 @@
+2017-05-28 majiasheng <jiasheng.ma@yahoo.com>
+	* Change main.php to load user info from db when logged in
+
+2017-05-27 majiasheng <jiasheng.ma@yahoo.com>
+	* Added session for application, user info now persists across multiple pages
+	  when logged in 
+
 2017-05-24 majiasheng <jiasheng.ma@yahoo.com>
 	* Refactored directory structure (v1)
 
